<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_sort_by_asc"
        android:text="@string/_asc"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_sort_by_desc"
        android:text="@string/_desc"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_sort_by_name"
        android:text="@string/_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_sort_by_date_modified"
        android:text="Date Modified"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_sort_by_file_size"
        android:text="@string/_filesize"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
