<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".permission">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="end"
            >
            <TextView
                android:id="@+id/btnskip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="14sp"
                style="@style/FontLocalized"
                android:textStyle="bold"
                android:text="@string/_skip"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/permission"
                android:layout_gravity="center"
                />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_permission_required"
                style="@style/FontLocalized"
                android:textStyle="bold"
                android:textSize="18dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                style="@style/FontLocalized"
                android:textSize="14dp"
                android:text="@string/_to_read_all_pdf"
                />



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <Button
            android:id="@+id/btnrequest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/_allow"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            style="@style/FontLocalized"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"

            />
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>