<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >




                <androidx.cardview.widget.CardView
                    android:id="@+id/carteview_help"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dip"
                    android:layout_marginRight="8.0dip"
                    app:cardCornerRadius="0.0dip"
                    app:cardElevation="2.0dip"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/carteview_setting"
                    tools:ignore="MissingConstraints">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:id="@+id/helpliniar"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"

                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_helpus"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/black">

                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal"
                            android:background="@color/colorPrimaryDark"
                            >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                >

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    app:srcCompat="@drawable/email"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    >

                                </ImageView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                >


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_feedback"
                                    android:textColor="@color/black"
                                    android:textSize="14sp">
                                </TextView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="end"
                                    >
                                    <ImageView
                                        android:onClick="feedback"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:src="@drawable/navigation"
                                        />
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal"
                            android:background="@color/colorPrimaryDark"
                            >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                >

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    app:srcCompat="@drawable/rateus"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    >

                                </ImageView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                >


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_rateus"
                                    android:textColor="@color/black"
                                    android:textSize="14sp">
                                </TextView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="end"
                                    >
                                    <ImageView
                                        android:onClick="rateus"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:src="@drawable/navigation"
                                        />
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal"
                            android:background="@color/colorPrimaryDark"
                            >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                >

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    app:srcCompat="@drawable/share"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    >

                                </ImageView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                >


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_shareapp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp">
                                </TextView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="end"
                                    >
                                    <ImageView
                                        android:onClick="share"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:src="@drawable/navigation"
                                        />
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:orientation="horizontal"
                            android:background="@color/colorPrimaryDark"
                            >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                >

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    app:srcCompat="@drawable/share"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    >

                                </ImageView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                >


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="TOOLS"
                                    android:textColor="@color/black"
                                    android:textSize="14sp">
                                </TextView>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:orientation="vertical">
                                <LinearLayout
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="end"
                                    >
                                    <ImageView
                                        android:onClick="tools"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:src="@drawable/navigation"
                                        />
                                </LinearLayout>
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="50dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>